# node

./: .dockerignore  .gitattributes  .gitignore  COMPLETE_SUCCESS_REPORT.md  CRATES_IO_RENAME_ISSUE.md  CURRENT_STATUS_AND_BLOCKERS.md  Cargo.toml  Cargo.toml.backup  DID_IMPLEMENTATION.md  DIGITALOCEAN_INFERENCE_SETUP.md  FINAL_SESSION_SUMMARY.md  FREE_TIER_SETUP.md  HANZO_NODE_REVIEW_REPORT.md  HANZO_ZOO_BOT_ANALYSIS.md  IDIOMATIC_RENAME_PLAN.md  IMPLEMENTATION_SUMMARY.md  INFERENCE_MIGRATION.md  LLM.md  LanceDB_Integration_Patterns.md  MIGRATION.md  MIGRATION_FIXES_SUMMARY.md  MODELS_STRATEGY.md  MODEL_PULL_DESIGN.md  Makefile  NAMING_FIXES_COMPLETE.md  NAMING_FIX_STATUS.md  NATIVE_EMBEDDINGS.md  NATIVE_MODEL_PULL_IMPLEMENTATION.md  PERFORMANCE_OPTIMIZATIONS.md  PQC_INTEGRATION_SUMMARY.md  PUBLISH_STATUS.md  QWEN3_MODELS_GUIDE.md  README.md  STANDALONE_GATEWAY_SERVICE.md  UPSTREAM_MERGE_v1.1.10.md  VERIFICATION_REPORT.md  WEB_EXPOSURE_GUIDE.md  check-dependencies.sh  check-published-1.1.11.sh  cleanup_warnings.sh  (+49 more)
hanzo-bin/hanzo-migrate/: Cargo.toml
hanzo-bin/hanzo-migrate/src/: main.rs
hanzo-bin/hanzo-node/: Cargo.toml  build.rs
hanzo-bin/hanzo-node/benches/: complete_benchmark.rs  performance_bench.rs
hanzo-bin/hanzo-node/examples/: generate_openapi_docs.rs
hanzo-bin/hanzo-node/shinkai-tools-runner-resources/: deno
hanzo-bin/hanzo-node/src/: lib.rs  main.rs  runner.rs  zap_server.rs
hanzo-bin/hanzo-node/src/cli/: keys.rs  mod.rs
hanzo-bin/hanzo-node/src/compute_dex/: mod.rs
hanzo-bin/hanzo-node/src/config/: mod.rs
hanzo-bin/hanzo-node/src/cron_tasks/: cron_manager.rs
hanzo-bin/hanzo-node/src/llm_provider/: error.rs  job_callback_manager.rs  job_manager.rs  llm_provider.rs  llm_provider_to_serialization.rs  parsing_helper.rs
hanzo-bin/hanzo-node/src/llm_provider/execution/: job_execution_core.rs  job_execution_helpers.rs  job_scope_helpers.rs  job_vector_search.rs  user_message_parser.rs
hanzo-bin/hanzo-node/src/llm_provider/providers/: claude.rs  deepseek.rs  exo.rs  gemini.rs  grok.rs  groq.rs  hanzo_backend.rs  local_regex.rs  mod.rs  ollama.rs  openai.rs  openai_responses.rs  openai_tests.rs  openrouter.rs  togetherai.rs
hanzo-bin/hanzo-node/src/managers/: galxe_quests.rs  identity_manager.rs  identity_network_manager.rs  model_capabilities_manager.rs  model_capabilities_manager_tests.rs  token_counter_tests.rs  tool_router.rs
hanzo-bin/hanzo-node/src/monitoring/: metrics.rs  mod.rs
hanzo-bin/hanzo-node/src/network/: README_LIBP2P.md  handle_commands_list.rs  libp2p_manager.rs  mcp_manager.rs  network_manager_utils.rs  node.rs  node_error.rs  node_shareable_logic.rs  ws_manager.rs  ws_routes.rs
hanzo-bin/hanzo-node/src/network/agent_payments_manager/: external_agent_offerings_manager.rs  my_agent_offerings_manager.rs
hanzo-bin/hanzo-node/src/security/: attestation_cache.rs  hardware_detection.rs  mod.rs  privacy_enforcement.rs  secure_execution.rs  tee_attestation.rs  tests.rs
hanzo-bin/hanzo-node/src/tools/: agent_execution.rs  tool_generation.rs  tool_prompts.rs
hanzo-bin/hanzo-node/src/utils/: args.rs  cli.rs  environment.rs  github_mcp.rs  keys.rs  logging_helpers.rs  printer.rs
hanzo-bin/hanzo-node/src/wallet/: coinbase_mpc_wallet.rs  local_ether_wallet.rs  wallet_manager.rs  wallet_traits.rs
hanzo-bin/hanzo-node/tests/: HOW_TO.md  complete_integration_test.rs  docker_integration_test.rs  end_to_end_test.rs  kubernetes_integration_test.rs  matrix_demo_test.rs  runtime_integration_test.rs  tee_integration_test.rs
hanzo-bin/hanzo-node/tests/it/: a3_micropayment_flow_tests.rs  a4_micropayment_localhost_tests.rs  change_nodes_name_tests.rs  cron_job_tests.rs  db_identity_tests.rs  db_inbox_tests.rs  db_job_tests.rs  db_llm_providers_tests.rs  db_restore_tests.rs  echo_tool_router_key_test.rs  job_branchs_retries_tests.rs  job_code_duplicate.rs  job_code_fork_tests.rs  job_concurrency_in_seq_tests.rs  job_fork_messages_tests.rs  job_image_analysis_tests.rs  job_manager_concurrency_tests.rs  job_tree_usage_tests.rs  model_capabilities_manager_tests.rs  native_tool_tests.rs  node_integration_tests.rs  node_retrying_tests.rs  node_simple_ux_tests.rs  performance_tests.rs  planner_integration_tests.rs  simple_job_example_tests.rs  tool_config_override_test.rs  websocket_tests.rs
hanzo-bin/hanzoai/: Cargo.toml
hanzo-bin/hanzoai/src/: main.rs
hanzo-libs/hanzo-db/: Cargo.toml
hanzo-libs/hanzo-job-queue-manager/: Cargo.toml
hanzo-libs/hanzo-job-queue-manager/src/: job_queue_manager.rs
hanzo-libs/hanzo-mining/: Cargo.toml  Cargo.toml.bak3
hanzo-libs/hanzo-mining/src/: lib.rs
hanzo-libs/hanzo-non-rust-code/: Cargo.toml
hanzo-libs/hanzo-non-rust-code/src/: lib.rs  test_utils.rs
hanzo-libs/hanzo-non-rust-code/src/functions/: get_identity_data.rs  parse_docx.rs  parse_pdf.rs  parse_xlsx.rs
hanzo-libs/hanzo-pqc/: Cargo.toml  Cargo.toml.bak3
hanzo-libs/hanzo-pqc/examples/: basic_usage.rs
hanzo-libs/hanzo-pqc/src/: config.rs  hybrid.rs  kem.rs  lib.rs  signature.rs
hanzo-libs/hanzo-pqc/tests/: integration_tests.rs  lux_crypto_parity.rs
hanzo-libs/hanzo-runtime/: Cargo.toml  Cargo.toml.bak3
hanzo-libs/hanzo-runtime-tests/: Cargo.toml
hanzo-libs/hanzo-runtime/src/functions/: get_identity_data.rs
hanzo-libs/hanzo-sheet/: Cargo.toml  Cargo.toml.bak3
hanzo-libs/hanzo-sheet/src/: cell_name_converter.rs  column_dependency_manager.rs  sheet.rs
hanzo-libs/hanzo-sheet/tests/: sheet_common_tests.rs  sheet_one_row_advanced_tests.rs
hanzo-libs/hanzo-tests/: Cargo.toml
hanzo-libs/hanzo-tools/: Cargo.toml  Cargo.toml.bak3
hanzo-libs/hanzo-tools-primitives/: Cargo.toml
hanzo-libs/hanzo-tools-primitives/src/tools/: agent_tool_wrapper.rs  deno_tools.rs  docker_tools.rs  error.rs  hanzo_tool.rs  kubernetes_tools.rs  mcp_server_tool.rs  mod.rs  network_tool.rs  parameters.rs  python_tools.rs  rust_tools.rs  shared_execution.rs  tool_config.rs  tool_playground.rs  tool_types.rs
hanzo-libs/hanzo-tools/src/tools/: mcp_server_tool.rs
hanzo-test-framework/: Cargo.toml
hanzo-test-framework/src/: context.rs
(+379 files in other folders)
