[workspace]
members = [
  "hanzo-libs/hanzo-api",
  "hanzo-libs/hanzo-baml",
  "hanzo-libs/hanzo-config",
  "hanzo-libs/hanzo-database",
  "hanzo-libs/hanzo-db",
  "hanzo-libs/hanzo-db-sqlite",
  "hanzo-libs/hanzo-did",
  "hanzo-libs/hanzo-embed",
  "hanzo-libs/hanzo-fs",
  "hanzo-libs/hanzo-hmm",
  "hanzo-libs/hanzo-http-api",
  "hanzo-libs/hanzo-identity",
  "hanzo-libs/hanzo-job-queue-manager",
  "hanzo-libs/hanzo-jobs",
  "hanzo-libs/hanzo-kbs",
  "hanzo-libs/hanzo-libp2p",
  "hanzo-libs/hanzo-libp2p-relayer",
  "hanzo-libs/hanzo-llm",
  "hanzo-libs/hanzo-mcp",
  "hanzo-libs/hanzo-messages",
  "hanzo-libs/hanzo-mining",
  "hanzo-libs/hanzo-model-discovery",
  "hanzo-libs/hanzo-models",
  "hanzo-libs/hanzo-pqc",
  "hanzo-libs/hanzo-runner",
  "hanzo-libs/hanzo-runtime",
  "hanzo-libs/hanzo-runtime-tests",
  "hanzo-libs/hanzo-sheet",
  # "hanzo-libs/hanzo-simulation",
  "hanzo-libs/hanzo-tests",
  "hanzo-libs/hanzo-tools",
  "hanzo-libs/hanzo-tools-runner",
  "hanzo-libs/hanzo-wasm",
  "hanzo-libs/hanzo-wasm-runtime",
  "hanzo-test-framework",
  "hanzo-test-macro",
  "hanzo-bin/*",
]
resolver = "2"

[workspace.package]
version = "1.1.10"
edition = "2021"
authors = ["Nico Arqueros <nico@hanzo.ai>"]

[workspace.dependencies]
hanzo-api = { path = "./hanzo-libs/hanzo-api" }
hanzo-baml = { path = "./hanzo-libs/hanzo-baml" }
hanzo-config = { path = "./hanzo-libs/hanzo-config" }
hanzo-database = { path = "./hanzo-libs/hanzo-database" }
hanzo-db = { path = "./hanzo-libs/hanzo-db" }
hanzo-db-sqlite = { path = "./hanzo-libs/hanzo-db-sqlite" }
hanzo-did = { path = "./hanzo-libs/hanzo-did" }
hanzo-embed = { path = "./hanzo-libs/hanzo-embed" }
hanzo-fs = { path = "./hanzo-libs/hanzo-fs" }
hanzo-hmm = { path = "./hanzo-libs/hanzo-hmm" }
hanzo-http-api = { path = "./hanzo-libs/hanzo-http-api" }
hanzo-identity = { path = "./hanzo-libs/hanzo-identity" }
hanzo-job-queue-manager = { path = "./hanzo-libs/hanzo-job-queue-manager" }
hanzo-jobs = { path = "./hanzo-libs/hanzo-jobs" }
hanzo-kbs = { path = "./hanzo-libs/hanzo-kbs" }
hanzo-libp2p = { path = "./hanzo-libs/hanzo-libp2p" }
hanzo-libp2p-relayer = { path = "./hanzo-libs/hanzo-libp2p-relayer" }
hanzo-llm = { path = "./hanzo-libs/hanzo-llm" }
hanzo-mcp = { path = "./hanzo-libs/hanzo-mcp" }
hanzo-messages = { path = "./hanzo-libs/hanzo-messages" }
hanzo-mining = { path = "./hanzo-libs/hanzo-mining" }
hanzo-model-discovery = { path = "./hanzo-libs/hanzo-model-discovery" }
hanzo-models = { path = "./hanzo-libs/hanzo-models" }
hanzo-pqc = { path = "./hanzo-libs/hanzo-pqc" }
hanzo-runner = { path = "./hanzo-libs/hanzo-runner" }
hanzo-runtime = { path = "./hanzo-libs/hanzo-runtime" }
hanzo-runtime-tests = { path = "./hanzo-libs/hanzo-runtime-tests" }
hanzo-sheet = { path = "./hanzo-libs/hanzo-sheet" }
# hanzo-simulation = { path = "./hanzo-libs/hanzo-simulation" }
hanzo-tests = { path = "./hanzo-libs/hanzo-tests" }
hanzo-tools = { path = "./hanzo-libs/hanzo-tools" }
hanzo-tools-runner = { path = "./hanzo-libs/hanzo-tools-runner" }
hanzo-wasm = { path = "./hanzo-libs/hanzo-wasm" }
hanzo-wasm-runtime = { path = "./hanzo-libs/hanzo-wasm-runtime" }



rmcp = { version = "0.8" }
futures = "0.3.30"
keyphrases = "0.3.3"
tokio = { version = "1.36", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "fs",
  "io-util",
  "net",
  "sync",
  "time",
] }
tokio-util = "0.7.13"
bincode = "1.3.3"
log = "0.4.20"
chrono = "0.4"
serde_json = "1.0.117"
anyhow = "1.0.94"
blake3 = "1.2.0"
sha2 = "0.10"
serde = "1.0.219"
base64 = "0.22.0"
reqwest = "0.11.27"
regex = "1"
uuid = { version = "1.6.1" }
rand = "=0.8.5"
hex = "=0.4.3"
env_logger = "0.11.5"
async-trait = "0.1.74"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
tempfile = "3.19"
lazy_static = "1.5.0"
async-channel = "1.6.1"
csv = "1.1.6"
thiserror = "2.0.3"
dashmap = "5.5.3"
hpke = "0.12"
chacha20poly1305 = "0.10"
clap = "3.0.0-beta.5"
r2d2 = "0.8.10"
r2d2_sqlite = "0.25"
rusqlite = { version = "0.32.1", features = ["bundled"] }
os_path = "0.8.0"
utoipa = "4.2.3"
warp = "0.3.7"
once_cell = "1.21"
home = "0.5"
strip-ansi-escapes = "0.2"
tracing = "0.1.40"
serde_yaml = "0.9.34-deprecated"
tokio-tungstenite = "0.26.2"
rustls = "0.23.27"
# Native embedding support via hanzoai/engine (our mistral.rs fork)
# hanzo_engine = { git = "https://github.com/hanzoai/engine.git", default-features = false }
# candle-core = "0.8"
# candle-nn = "0.8"
# candle-transformers = "0.8"
# hf-hub = "0.3"
# tokenizers = "0.20"
dirs = "5.0"
libp2p = { version = "0.55.0", features = [
  "noise",
  "yamux",
  "tcp",
  "quic",
  "dcutr",
  "identify",
  "ping",
  "relay",
  "request-response",
  "json",
  "tokio",
  "macros",
] }

# Dev dependencies
criterion = "0.5"
proptest = "1.0"
tokio-test = "0.4"
