[package]
name = "hanzo-test-framework"
version = "0.1.0"
edition = "2021"


[lib]
name = "hanzo_test_framework"

[dependencies]
tokio = { workspace = true }
async-channel = { workspace = true }
anyhow = { workspace = true }
hanzo-http-api = { workspace = true }
hanzo-messages = { workspace = true }
hanzo-embed = { workspace = true }
hanzo-db-sqlite = { workspace = true }
hanzo-node = { path = "../hanzo-bin/hanzo-node" }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
tempfile = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
