[package]
name = "hanzo-node"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

# this makes `cargo run` in the workspace root to run this package
default-run = "hanzo-node"

[build-dependencies]
hanzo-tools-runner = { workspace = true, features = ["built-in-tools"] }

# Features
[features]
default = []
console = ["console-subscriber"]
# Enable additional debug output when this feature is selected
debug = []
# Enable ngrok support when the `ngrok` feature is selected
ngrok = ["dep:ngrok"]
# Enable swagger-ui when this feature is selected
swagger-ui = ["hanzo-http-api/swagger-ui"]
# static-pdf-parser = ["hanzo-vector_resources/static-pdf-parser"]

[lib]
doctest = false

[dependencies]
libp2p = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
async-trait = { workspace = true }
warp = { workspace = true, features = ["compression-gzip"] }
x25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
async-channel = { workspace = true }
lazy_static = { workspace = true }
clap = { workspace = true }
regex = { workspace = true }
csv = { workspace = true }
once_cell = "1.19.0"
rmcp = { workspace = true, features = [
    "transport-child-process",
    "client",
    "transport-sse-client",
] }
uuid = { workspace = true, features = ["v4"] }
reqwest = { workspace = true, features = [
    "json",
    "tokio-native-tls",
    "multipart",
    "stream",
] }
keyphrases = { workspace = true }
hanzo-messages = { workspace = true }
hanzo-identity = { workspace = true }
hanzo-job-queue-manager = { workspace = true }
hanzo-tools = { workspace = true }
hanzo-libp2p-relayer = { workspace = true }
hanzo-http-api = { workspace = true }
hanzo-db-sqlite = { workspace = true }
hanzo-embed = { workspace = true }
hanzo-fs = { workspace = true }
hanzo-runtime = { workspace = true }
hanzo-mcp = { workspace = true }
# hanzo-baml = { workspace = true }
bincode = { workspace = true }
urlencoding = "2.1.0"
hex = { workspace = true }
aes-gcm = "0.10.3"
blake3 = { workspace = true }
cron-parser = "0.8.1"
dashmap = { workspace = true }
async-lock = "2.4.0"
governor = "0.6.3"
hanzo-tools-runner = { workspace = true, features = ["built-in-tools"] }
console-subscriber = { version = "0.1", optional = true }
downcast-rs = "1.2.1"
bigdecimal = "0.2.2"
rust_decimal = "1.17.0"
rcgen = "0.13.1"
serde = { workspace = true, features = ["derive"] }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
rusqlite = { workspace = true }
env_logger = { workspace = true }
zip = "2.2.1"
open = "5.3.2"
sha2 = "0.10"
toml = "0.8.22"
rustls = { workspace = true }
ngrok = { version = "0.15.0", features = ["hyper"], optional = true }
url = "2.5.0"
serde_yaml = { workspace = true }
thiserror = { workspace = true }
ai-model-catalog = "0.1.0"

[dev-dependencies]
mockito = "1.0.2"
tokio-tungstenite = { workspace = true }
tempfile = { workspace = true }
fs_extra = "1.2.0"
utoipa = { workspace = true, features = ["yaml"] }
hanzo-test-framework = { path = "../../hanzo-test-framework" }
hanzo-test-macro = { path = "../../hanzo-test-macro" }
