[package]
name = "hanzoai"
version = "1.1.10"
edition = "2021"
authors = ["Hanzo AI Team <team@hanzo.ai>"]
description = "Hanzo AI Engine - High-performance LLM inference and model management"
license = "Apache-2.0"

[[bin]]
name = "hanzoai"
path = "src/main.rs"

[dependencies]
# Core dependencies
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Hanzo libraries
hanzo_model_discovery = { path = "../../hanzo-libs/hanzo-model-discovery" }
hanzo_message_primitives = { path = "../../hanzo-libs/hanzo-message-primitives" }
hanzo_embedding = { path = "../../hanzo-libs/hanzo-embedding" }

# HTTP and API
reqwest = { version = "0.11", features = ["json", "stream"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
thiserror = "1.0"
directories = "5.0"
indicatif = "0.17"
colored = "2.1"
humansize = "2.1"

# Model management
git2 = "0.18"
sha2 = "0.10"
futures = "0.3"
bytes = "1.5"

[dev-dependencies]
tempfile = "3.8"