[package]
name = "hanzo_job_queue_manager"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
hanzo_message_primitives = { workspace = true }
hanzo_sqlite = { workspace = true }
hanzo_embedding = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde_json = { workspace = true }

[dependencies.serde]
workspace = true
features = ["derive"]

[dev-dependencies]
# hanzo_vector_resources = { workspace = true }
tempfile = { workspace = true }
