[package]
name = "hanzo-job-queue-manager"
description = "Hanzo AI - Job Queue Manager Library"
license = "MIT"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
hanzo-messages = { workspace = true }
hanzo-db-sqlite = { workspace = true }
hanzo-embed = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde_json = { workspace = true }

[dependencies.serde]
workspace = true
features = ["derive"]

[dev-dependencies]
# hanzo-vector_resources = { workspace = true }
tempfile = { workspace = true }
