[package]
name = "hanzo_non_rust_code"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
hanzo_tools_runner = { workspace = true }
tempfile = { workspace = true }
hanzo_message_primitives = { workspace = true }
log = { workspace = true }