[package]
name = "hanzo-pqc"
description = "Hanzo AI - Pqc Library"
license = "MIT"
version = "1.1.12"
edition = { workspace = true }
authors = { workspace = true }

[features]
# Default keeps the working oqs path until luxcpp/crypto's ML-DSA/ML-KEM/SLH-DSA
# implementations land (currently stubs that return CRYPTO_ERR_NOTIMPL). When
# the canonical impls are in place, flip default to ["lux-crypto-impl", ...].
default = ["ml-kem", "ml-dsa", "hybrid", "legacy-oqs", "legacy-ed25519-dalek"]
ml-kem = []
ml-dsa = []
slh-dsa = []
hybrid = ["x25519-dalek"]
fips-mode = []
gpu-cc = []
tee-io = []
# Canonical luxcpp/crypto FFI path. Mutually exclusive with legacy-oqs at
# runtime (the code picks whichever is enabled at compile time).
lux-crypto-impl = []
# Legacy crypto stacks. Bundled into `default` so existing consumers keep
# their behaviour. Disable both `legacy-*` flags and enable `lux-crypto-impl`
# to migrate to the canonical FFI path.
legacy-oqs = ["dep:oqs"]
legacy-ed25519-dalek = []

[dependencies]
# Canonical luxcpp/crypto FFI bindings -- ML-KEM, ML-DSA, SLH-DSA, Ed25519.
# Brought in unconditionally so the symbols are always callable; the call
# sites switch via `cfg(feature = "lux-crypto-impl")`.
lux-crypto = { workspace = true }

# Legacy stack -- only compiled in when `legacy-oqs` is enabled.
oqs = { version = "0.11", default-features = false, features = ["std", "ml_kem", "ml_dsa"], optional = true }

# Classical crypto for hybrid mode
x25519-dalek = { workspace = true, optional = true }
ed25519-dalek = { workspace = true }

# KDF and utilities
hkdf = "0.12"
sha2 = { workspace = true }
sha3 = "0.10"
blake3 = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
bincode = { workspace = true }
base64 = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async support
async-trait = { workspace = true }
tokio = { workspace = true }

# Random number generation (FIPS compliant)
rand = { workspace = true }
getrandom = { version = "0.2", features = ["std"] }

# Attestation support
hex = { workspace = true }
zeroize = { version = "1.8", features = ["derive"] }

[dev-dependencies]
tokio-test = { workspace = true }
criterion = { workspace = true }
proptest = "1.0"

[[bench]]
name = "pqc_benchmarks"
harness = false