[package]
name = "hanzo-runtime-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
criterion = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"

# Runtime dependencies
hanzo_wasm_runtime = { path = "../hanzo-wasm-runtime" }
hanzo_tools_primitives = { path = "../hanzo-tools-primitives" }
hanzo_message_primitives = { path = "../hanzo-message-primitives" }
hanzo_sqlite = { path = "../hanzo-sqlite" }

# For Docker tests
bollard = "0.17"

# For test assets
include_dir = "2.0"
wat = "1.217"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"

[[bench]]
name = "runtime_benchmarks"
harness = false