[package]
name = "hanzo-runtime"
version = "1.1.11"
edition = "2021"
authors = ["Hanzo AI Inc"]
license = "MIT"
repository = "https://github.com/hanzoai/hanzo-node"
homepage = "https://hanzo.ai"
description = "Non Rust Code for Hanzo AI platform"

[dependencies]
serde = { version = "1.0.219", features = ['derive'] }
serde_json = "1.0.117"
tokio = { version = "1.36", features = ['rt', 'rt-multi-thread', 'macros', 'fs', 'io-util', 'net', 'sync', 'time'] }
hanzo-runner = { workspace = true, version = "1.1.11" }
tempfile = "3.8"
hanzo-messages = { workspace = true, version = "1.1.11" }
log = "0.4.20"