[package]
name = "hanzo-sheet"
description = "Hanzo AI - Sheet Library"
license = "MIT"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4"] }
regex = { workspace = true }
hanzo-messages = { workspace = true }
async-channel = { workspace = true }

[dependencies.serde]
workspace = true
features = ["derive"]

[[test]]
name = "sheet_common_tests"
path = "tests/sheet_common_tests.rs"

[[test]]
name = "sheet_one_row_advanced_tests"
path = "tests/sheet_one_row_advanced_tests.rs"
