[package]
name = "hanzo-tests"
description = "Hanzo AI - Tests Library"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
criterion = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"

# Runtime dependencies
hanzo-wasm = { path = "../hanzo-wasm" }
hanzo-tools = { path = "../hanzo-tools" }
hanzo-messages = { path = "../hanzo-messages" }
hanzo-db-sqlite = { path = "../hanzo-db-sqlite" }

# For Docker tests
bollard = "0.17"

# For test assets
include_dir = "0.7"
wat = "1.217"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"

