[package]
name = "hanzo_tools_primitives"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
regex = { workspace = true }
hanzo_message_primitives = { workspace = true }
# hanzo_vector_resources = { workspace = true }
reqwest = { workspace = true, features = ["json", "tokio-native-tls"] }
shinkai_tools_runner = { workspace = true, features = ["built-in-tools"] }
serde = { workspace = true, features = ["derive"] }
base64 = { workspace = true }
rmcp = { workspace = true, features = ["client", "transport-child-process", "transport-sse-client"] }
log = { workspace = true }
once_cell = "1.19"
hanzo_mcp = { workspace = true }
