[package]
name = "hanzo-tools"
version = "1.1.11"
edition = "2021"
authors = ["Hanzo AI Inc"]
license = "MIT"
repository = "https://github.com/hanzoai/hanzo-node"
homepage = "https://hanzo.ai"
description = "Tools Primitives for Hanzo AI platform"

[dependencies]
serde_json = "1.0.117"
tokio = { version = "1.36", features = ['rt', 'rt-multi-thread', 'macros', 'fs', 'io-util', 'net', 'sync', 'time'] }
regex = "1"
hanzo-messages = { workspace = true }
# hanzo-vector_resources = {  }
reqwest = { version = "0.11.27", features = ['json'] }
hanzo-tools-runner = { workspace = true }
serde = { version = "1.0.219", features = ['derive'] }
base64 = "0.22.0"
rmcp = { workspace = true, features = ["client", "transport-child-process", "transport-sse-client", "transport-sse-client-reqwest", "transport-streamable-http-client-reqwest"] }
log = "0.4.20"
once_cell = "1.19"
hanzo-mcp = { workspace = true }
